fix(eds-demo): 💄 Update hover background color for .button--ghost-icon to align with dynamic

--- a/packages/eds-demo/src/app/(exercise)/static/styles.module.css
+++ b/packages/eds-demo/src/app/(exercise)/static/styles.module.css
@@ -61,7 +61,7 @@ Use Dev Mode in Figma to inspect elements and find the variable name.
 
 .button--ghost-icon {
   &:hover {
-    background-color: var(--eds-color-bg-accent-fill-muted-hover);
+    background-color: var(--eds-color-bg-neutral-fill-muted-hover);
   }
 }
 
